# ProjectsHandler

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: projectshandler.py
src/core/: handler.py  structures.py  tui.py  utils.py
