[build-system]
requires = [
    "setuptools>=45",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name = "ProjectsHandler"
version = "0.1.0"
description = "Handler, assistant, manager of all your amazing projects"
authors = [
    {name = "wandderq", email = "wanddr.qq.twink@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["projects", "handler", "helper", "manager"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Repository = "https://github.com/wandderq/projecthandler"

[project.scripts]
projectshandler = "projectshandler:main" 

[tool.black]
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --color=yes"